# cot2tot

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  cli_quick_start.py  example.py  pyproject.toml  quick_start.py
cot2tot/: __init__.py  llm.py  models.py  parser.py  utils.py  visualize.py
tests/: test_model.py  test_parser.py  test_utils.py  test_visualize.py
tests/fixtures/: cot.json  cot2.json  cot4.json  graph.json  graph2.json  graph3.json  graph4.json  llm_output.json  llm_output2.json  llm_output4.json
