[tool.poetry]
name = "cot2tot"
version = "0.1.0"
description = ""
authors = ["vale95ntino <assandrivalentino@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.61.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
pydot = "^3.0.4"
numpy = "^2.2.2"
imageio = "^2.37.0"
mplcursors = "^0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
